--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "part-6": "playwright test api-routes.spec.js"
   },
   "dependencies": {
+    "buid": "^0.3.1",
+    "build": "^0.1.4",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
